<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btnViewProducts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_products"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="48dp" />

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_product"
        app:layout_constraintTop_toBottomOf="@id/btnViewProducts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnSwitchLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/switch_language"
        app:layout_constraintTop_toBottomOf="@id/btnAddProduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
